--- a/projects/ng-bttv/package.json
+++ b/projects/ng-bttv/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "ng-bttv",
+  "name": "@nggondolas/ng-bttv",
   "version": "0.0.1",
+  "license": "MIT",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^11.0.5",
     "@angular/core": "^11.0.5"
